cambios agregamos sitios de aja

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head> Aqui voy a poner mis ideas
 <body>
  <p>
- Hola estudiantes siganme en twitter en @Domoarigatou27    
+ Hola estudiantes siganme en twitter en @Domoarigatou27  aja  
  </p>   
 </body>
 </html>
